--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cardinalsys.github.io/portfolio",
+  "homepage": "http://cardinalsys.github.io/Portfolio",
   "name": "mi-app",
   "version": "0.1.0",
   "private": true,
